--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,16 @@
 {
   "manifest_version": 3,
-  "name": "Font changer",
+  "name": "Personnalised Font Changer",
+  "description": "Change the font of websites according to the users' preferences",
   "version": "1.0",
-  "description": "Change the font of all web pages based on user selection",
   "permissions": ["activeTab", "storage"],
   "action": {
     "default_popup": "popup.html"
   },
   "content_scripts": [
     {
-      "js": ["scripts/content.js"],
-      "matches": [
-        "<all_urls>"
-      ]
+      "matches": ["<all_urls>"],
+      "js": ["content.js"]
     }
   ]
 }
